--- a/style.css
+++ b/style.css
@@ -1,48 +1,59 @@
 /* FILEPATH: /Users/ben/mine/code/template/style.css */
+:root {
+  --sidebar-width: 15%;
+}
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 .sidebar {
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-y: auto;
-    background-color: aqua;
-    width: 10%;
-}
-.sidebar::-webkit-scrollbar {
-    width: 4px;
-}
-
-.sidebar::-webkit-scrollbar-thumb {
-    background-color: rgb(190, 189, 189);
-    border-radius: 10px;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+  background-color: rgb(220, 220, 220);
+  width: var(--sidebar-width);
 }
 
 .main-content {
-    margin-left: 10%;
+  margin-left: var(--sidebar-width);
 }
+.sidebar::-webkit-scrollbar {
+  width: 4px;
+}
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: rgb(191, 191, 191);
+  border-radius: 10px;
+}
+
 .sidebar h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .sidebar ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar li {
-    margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.sidebar .icon {
+  margin-right: 10px;
+  font-size: 1.2em;
+  margin-left: 20px;
 }
 
 .sidebar a {
-    color: #333;
-    text-decoration: none;
+  color: #333;
+  text-decoration: none;
 }
 
-.sidebar a:hover {
-    text-decoration: underline;
+.sidebar li:hover {
+  background-color: #b0b0b0;
 }
