--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* FILEPATH: /Users/ben/mine/code/template/style.css */
 :root {
   --sidebar-width: 15%;
 }
@@ -13,6 +12,18 @@ html {
   overflow-y: auto;
   background-color: rgb(220, 220, 220);
   width: var(--sidebar-width);
+}
+
+.sidebar .header-logo {
+  margin-right: 6px;
+}
+.sidebar .header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 14px;
+  background-color: #a19f9f;
+  color: #ffffff;
 }
 
 .main-content {
@@ -37,12 +48,6 @@ html {
   padding: 0;
 }
 
-.sidebar li {
-  display: flex;
-  align-items: center;
-  margin-bottom: 0.5rem;
-}
-
 .sidebar .icon {
   margin-right: 10px;
   font-size: 1.2em;
@@ -50,10 +55,14 @@ html {
 }
 
 .sidebar a {
+  display: flex;
+  align-items: center;
   color: #333;
   text-decoration: none;
+  padding: 10px 0;
+  width: 100%;
 }
 
-.sidebar li:hover {
-  background-color: #b0b0b0;
+.sidebar a:hover {
+  background-color: rgb(191, 191, 191);
 }
