--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ html {
 .sidebar .header-logo {
   margin-right: 6px;
 }
-
 .sidebar .header {
   display: flex;
   align-items: center;
@@ -106,4 +105,10 @@ html {
 }
 .change #bar3 {
   transform: translateY(-2px) rotateZ(40deg);
+}
+.menu-text-hide {
+  display: none;
+}
+.header-title-hide {
+  display: none;
 }
