update: css class name

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html {
   padding: 0;
 }
 
-.theme-sidebar .icon {
+.theme-sidebar .theme-icon {
   margin-right: 10px;
   font-size: 1.2em;
   margin-left: 20px;
