--- a/theme-style.css
+++ b/theme-style.css
@@ -76,12 +76,15 @@ html {
   left: calc(var(--theme-sidebar-width) + 4px);
   width: 25px;
   cursor: pointer;
+  display: none;
+  transition: display 10s;
 }
-
-.theme-sidebar-toggler-close {
+.theme-sidebar-toggler-toggle {
   left: calc(var(--theme-sidebar-width-toggle) + 4px);
 }
-
+.theme-sidebar-toggler-show {
+  display: block;
+}
 .theme-bar {
   height: 3px;
   width: 100%;
