--- a/resources/css/theme-style.css
+++ b/resources/css/theme-style.css
@@ -75,6 +75,7 @@ html {
   width: 18px;
   cursor: pointer;
   transition: display 10s;
+  display: none;
 }
 .theme-sidebar-toggler-show {
   display: block;
