--- a/theme-style.css
+++ b/theme-style.css
@@ -24,7 +24,6 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 14px;
   background-color: #a19f9f;
   color: #ffffff;
 }
@@ -71,30 +70,26 @@ html {
 }
 
 .theme-sidebar-toggler {
-  position: sticky;
-  top: 10px;
-  left: calc(var(--theme-sidebar-width) + 4px);
-  width: 25px;
+  position: absolute;
+  right: 4px;
+  width: 18px;
   cursor: pointer;
-  display: none;
   transition: display 10s;
-}
-.theme-sidebar-toggler-toggle {
-  left: calc(var(--theme-sidebar-width-toggle) + 4px);
+  display: none;
 }
 .theme-sidebar-toggler-show {
   display: block;
 }
-.theme-bar {
-  height: 3px;
+.theme-hamburger-menu {
+  height: 2px;
   width: 100%;
-  background-color: #ca6a6a;
+  background-color: #ffffff;
   border-radius: 2px;
 }
-#theme-bar1 {
+#theme-hamburger-menu1 {
   transform: translateY(-4px);
 }
-#theme-bar3 {
+#theme-hamburger-menu3 {
   transform: translateY(4px);
 }
 .theme-menu-text-toggle {
