--- a/theme-style.css
+++ b/theme-style.css
@@ -75,7 +75,9 @@ html {
   width: 18px;
   cursor: pointer;
   transition: display 10s;
-  display: none;
+  padding: 8px 0 8px 4px;
+  margin: 0;
+  /* display: none; */
 }
 .theme-sidebar-toggler-show {
   display: block;
