--- a/theme-style.css
+++ b/theme-style.css
@@ -77,7 +77,7 @@ html {
   transition: display 10s;
   padding: 8px 0 8px 4px;
   margin: 0;
-  /* display: none; */
+  display: none;
 }
 .theme-sidebar-toggler-show {
   display: block;
